--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
+/* App.css */
+
+/* html, body, #root {
+  height: 100%;
+  margin: 0;
+} */
+
+/* .App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+} */
+
+/* .main-content {
+  flex: 1; 
+} */
+
 #root {
   max-width: 1280px;
+  /* width: 100%; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
