--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,57 @@
 /* App.css */
 
-/* html, body, #root {
-  height: 100%;
-  margin: 0;
-} */
+* {
+  scroll-behavior: smooth;
+}
 
-/* .App {
+.App {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  overflow-x: hidden;
+}
+
+  .navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  padding: 1rem; 
+  display: flex;
+  justify-content: center;
+  gap: 2rem; 
+  z-index: 1000;
+} 
+
+.navbar a {
+  color: grey;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.navbar.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  /* ... any other styles you want for the sticky navbar */
+}
+
+.section {
+  /* min-height: 100vh;
   display: flex;
   flex-direction: column;
-  min-height: 100vh; 
-} */
-
-/* .main-content {
-  flex: 1; 
-} */
-
-#root {
-  max-width: 1280px;
-  /* width: 100%; */
-  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
   padding: 2rem;
-  text-align: center;
+  scroll-snap-align: start; */
+
+  min-height: 100vh;
+  padding: 6rem 2rem;
+  scroll-snap-align: start;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#home, #about, #projects, #contact {
+  background-color: black;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
