--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
 
 * {
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .App {
@@ -15,8 +18,8 @@
   top: 0;
   width: 100%;
   background-color: black;
-  color: white;
-  padding: 1rem; 
+  color: black;
+  /* padding: 1rem; */
   display: flex;
   justify-content: center;
   gap: 2rem; 
@@ -38,17 +41,15 @@
 }
 
 .section {
-  /* min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  scroll-snap-align: start; */
-
   min-height: 100vh;
-  padding: 6rem 2rem;
+  /* padding: 6rem 2rem; */
   scroll-snap-align: start;
+}
+.project-image {
+  width: 100%;
+  height: auto;
+  max-width: 400px; /* Set a max-width if you want to limit the image size */
+  object-fit: cover; /* Ensures images cover their container proportionally */
 }
 
 #home, #about, #projects, #contact {
