--- a/src/App.css
+++ b/src/App.css
@@ -142,12 +142,25 @@ p {
   width: 64px;
   height: 64px;
   transition: transform 0.3s ease, filter 0.3s ease;
+  /* margin: 0 12px; */
 }
 
 .contact .icon:hover {
   transform: scale(1.1);
   filter: brightness(1.2);
 }
+
+/* .contact .icon1 {
+  width: 95px;
+  height: 95px;
+  margin-right: 100px;
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.contact .icon1:hover {
+  transform: scale(1.1);
+  filter: brightness(1.2);
+} */
 
 
 
