--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ h2 {
 p {
   font-size: 1rem;
   line-height: 1.6;
-  color: #333; /* Dark text color for readability */
+  color: #837e7e; /* Dark text color for readability */
 }
 
 /* project.css */
